--- a/src/styles/overlays/_ExercisePicker.scss
+++ b/src/styles/overlays/_ExercisePicker.scss
@@ -137,6 +137,8 @@
       flex-direction: row;
       flex-wrap: wrap;
       padding: 0px 10px;
+      justify-content: space-between;
+      align-items: stretch;
       .exercise-panel {
         width: 30%;
       }
